--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,11 @@
   font-weight: normal
 }
 
+.font-neue-plak-thin {
+  font-family: 'Neue Plak Regular', system-ui, sans-serif;
+  font-weight: normal
+}
+
 .navbar-glass {
   @apply bg-black/40 backdrop-blur-md border border-white/10 shadow-lg;
 }
@@ -171,6 +176,13 @@
 @font-face {
   font-family: "Neue Plak Regular";
   src: url("/src/assets/fonts/NeuePlakText-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Neue Plak Thin";
+  src: url("/src/assets/fonts/NeuePlak-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
